--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -9,6 +9,8 @@
     </section>
 
     <section class="powerby">
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+<span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span> <br>
         {{ with .Site.Params.footer.customText }}
         {{ . | safeHTML }} <br />
         {{ end }}
