--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -27,6 +27,7 @@
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="//csshake.surge.sh/csshake.min.css">
 <script>
     var now = new Date();
     function createtime() {
