--- a/themes/stack/layouts/partials/article/components/details.html
+++ b/themes/stack/layouts/partials/article/components/details.html
@@ -2,7 +2,8 @@
     {{ if .Params.categories }}
     <header class="article-category">
         {{ range (.GetTerms "categories") }}
-            <a href="{{ .RelPermalink }}" {{ with .Params.style }}style="background-color: {{ .background }}; color: {{ .color }};"{{ end }}>
+            <a href="{{ .RelPermalink }}" {{ with .Params.style }}style="background-color: {{ .background }}; color: {{ .color }};"
+                {{ end }}>
                 {{ .LinkTitle }}
             </a>
         {{ end }}
